--- a/notebooks/serosurvey-analysis.Rmd
+++ b/notebooks/serosurvey-analysis.Rmd
@@ -10,56 +10,22 @@ params:
 ---
 
 ```{r setup, include=FALSE}
-if(!require(checkpoint)){
-  install.packages("checkpoint")
-  library(checkpoint)
-}
-checkpoint("2021-05-05", scanForPackages = F)
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE)
 knitr::opts_knit$set(root.dir = here::here())
 ```
 
 ```{r preamble, include=FALSE}
+library(tidyverse)
+library(rstan)
+library(doMC)
 library(gridExtra)
-
-if(!require(tidyverse)){
-  install.packages("tidyverse")
-  library(tidyverse)
-}
-if(!require(rstan)){
-  install.packages("rstan")
-  library(rstan)
-}
-if(!require(doMC)){
-  install.packages("doMC")
-  library(doMC)
-}
-if(!require(gridExtra)){
-  install.packages("gridExtra")
-  library(gridExtra)
-}
-if(!require(loo)){
-  install.packages("loo")
-  library(loo)
-}
-if(!require(parallel)){
-  install.packages("parallel")
-  library(parallel)
-}
-if(!require(doParallel)){
-  install.packages("doParallel")
-  library(doParallel)
-}
 
 source("scripts/utils.R")
 
 cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 
 ## age cuts
-age_cuts <- c(5, 10, 20, 50, 65, 105)
-
-## names of RHAs
-RHA_names <- c(“WRHA”, “PMA”, “IEHA”, “NHRA”, “SHRA”)
+age_cuts <- c(0, 9, 20, 40, 60, 125)
 
 ## Stan/JAGS settings, don't need to change
 options(mc.cores = parallel::detectCores()-2) ## use all cores but two for this
@@ -121,21 +87,20 @@ control_fp_ifa <- 0 #lab_val_dat %>%
 
 ```{r epi data, include = FALSE}
 ## Geneva incidence data
-inc_dat <- read_csv("data/cases_gva.csv") %>%
+inc_dat <- read_csv("data/manitoba_covid_numbers.csv") %>%
   mutate(date = as.Date(date, format = "%d/%m/%y"))
 inc_dat$incidI <- c(0, diff(inc_dat$ncumul_conf))
 inc_dat$incidD <- c(0, diff(inc_dat$ncumul_deceased))
 
 ## Geneva ages
-gva_ages <- read_csv("data/canton_age_2019.csv") %>%
+gva_ages <- read_csv("data/manitoba_age_2019.csv") %>%
   mutate_at(
     c("men", "women", "total"),
     function(x) str_replace(x, pattern = " ", repl = "") %>% as.numeric()
   )
 
 ## read and fix serology data
-sero_dat <- read_csv("generated_data/serocov-pop_data_public.csv") %>%
-  mutate(rha = sample(RHA_names, n(), replace = TRUE, prob = rep(0.2, 5))) %>%  ## To simulate the RHA in the test data set (remove for real data)
+sero_dat <- read_csv("generated_data/manitoba_pop_data_fake.csv") %>%
   rename(household_id = new_household_id) %>% 
   mutate(age_cat = cut(age, age_cuts, right = F)) %>%
   group_by(household_id) %>%
@@ -148,11 +113,13 @@ sero_dat <- read_csv("generated_data/serocov-pop_data_public.csv") %>%
   droplevels()
 
 wk_ref <- "2"
-age_ref <- "[20,50)"
+age_ref <- "[20,40)"
 sex_ref <- "0"
 
 ## age categories
 age_cats <- unique(as.character(sero_dat$age_cat)) %>% sort()
+
+## rha <- c("1","2","3","4","5")
 
 ## find population-level proportions of age and sex for sero_dat
 gva_age_cats <- gva_ages %>%
@@ -287,6 +254,7 @@ sero_dat %>%
 
 ```{r re-stan, cache=F, eval=T}
 
+
 if (!file.exists(out_est_file) | params$redo) {
   ## model the overall seropositivity with a random effect for household
   re_seropos <- run_analysis_stan_re(
@@ -381,7 +349,7 @@ subset_est %>%
 subset_est %>%
   filter(var == "Age") %>%
   group_by(sim) %>%
-  mutate(rr = ifelse(val == "[20,50)", NA, p / p[val == "[20,50)"])) %>%
+  mutate(rr = ifelse(val == "[20,40)", NA, p / p[val == "[20,40)"])) %>%
   ungroup() %>%
   left_join(sero_dat %>%
     group_by(age_cat) %>%
@@ -523,4 +491,4 @@ We find that for every confirmed case we have `r round((sum(gva_pop$total)*.108)
 
 ```{r}
 sessionInfo()
-```
+-```
