--- a/notebooks/serosurvey-analysis.Rmd
+++ b/notebooks/serosurvey-analysis.Rmd
@@ -261,11 +261,11 @@ if (!file.exists(out_est_file) | params$redo) {
     model_script = "stan/serosurvey-analysis-re.stan",
     dat = sero_dat,
     analysis = "ei",
-    coef_eqn = "Sex + age_cat + week",
+    coef_eqn = "Sex + age_cat + week + rha",
     pos_control = pos_control,
     neg_control = neg_control,
     control_tp = control_tp_hi,
-    control_fp = control_fp_hi,
+    control_fp = control_fp_hi, 
     pop_age_cats = gva_age_cats,
     chains = n_chains,
     iter = n_iter,
