--- a/notebooks/serosurvey-analysis.Rmd
+++ b/notebooks/serosurvey-analysis.Rmd
@@ -150,16 +150,17 @@ gva_ages <- read_csv("data/manitoba_age_2019.csv") %>%
 ## read and fix serology data
 sero_dat <- read_csv("generated_data/manitoba_pop_data_fake.csv") %>%
   rename(household_id = new_household_id) %>% 
-  mutate(age_cat = cut(age, age_cuts, right = F),
-          rha_name = RHA_names[rha]) %>%
+  mutate(age_cat = cut(age, age_cuts, right = F)) %>%
   group_by(household_id) %>%
   mutate(
     hh_obs = n(),
     hh_inf = sum(pos) - pos,
-    other_inf = hh_inf > 0
+    other_inf = hh_inf > 0,
+    rha = sample(5, 1)
   ) %>%
   ungroup() %>%
-  droplevels()
+  droplevels() %>%
+  mutate(rha_name = RHA_names[rha])
 
 wk_ref <- "2"
 age_ref <- "[20,40)"
@@ -316,6 +317,29 @@ sero_dat %>%
 
 ```{r re-stan, cache=F, eval=T}
 
+sero_dat <- mutate(sero_dat,
+                    time_point = as.numeric(week))
+model <- stan_model("stan/serosurvey-analysis-re.stan")
+
+X <- model.matrix(~Sex + age_cat, data = sero_dat)
+
+result <- sampling(model, data = list(N_survey = nrow(sero_dat),
+                                      H = max(sero_dat$household_id),
+                                      R = max(sero_dat$rha),
+                                      survey_pos = sero_dat$pos,
+                                      hh = sero_dat$household_id,
+                                      p_vars = ncol(X),
+                                      n_time = max(sero_dat$time_point),
+                                      X = X,
+                                      time_point = sero_dat$time_point,
+                                      N_pos_control = pos_control,
+                                      control_tp = control_tp_hi,
+                                      N_neg_control = neg_control,
+                                      control_fp = control_fp_hi,
+                                      rha = sero_dat$rha),
+                    warmup = 500, iter = 2500, refresh = 100,
+                    chains = 4, cores = 4, sample_file = "diag",
+                    control = list(adapt_delta = 0.99, max_treedepth = 20))
 
 if (!file.exists(out_est_file) | params$redo) {
   ## model the overall seropositivity with a random effect for household
