Corrected typo in package name

--- a/notebooks/serosurvey-analysis.Rmd
+++ b/notebooks/serosurvey-analysis.Rmd
@@ -55,7 +55,7 @@ if(!require(icenReg)){
 }
 if(!require(viridis)){
   install.packages("viridis")
-  library(virisdis)
+  library(viridis)
 }
 
 source("scripts/utils.R")
