--- a/notebooks/serosurvey-analysis.Rmd
+++ b/notebooks/serosurvey-analysis.Rmd
@@ -164,6 +164,7 @@ sero_dat <- read_csv("generated_data/manitoba_pop_data_fake.csv") %>%
 wk_ref <- "2"
 age_ref <- "[20,40)"
 sex_ref <- "0"
+rha_name_ref <- "WRHA"
 
 ## age categories
 age_cats <- unique(as.character(sero_dat$age_cat)) %>% sort()
@@ -247,15 +248,19 @@ primary_age_cats <- gva_ages %>%
 sero_dat$Sex <- relevel(as.factor(sero_dat$Sex), sex_ref)
 sero_dat$age_cat <- relevel(sero_dat$age_cat, age_ref)
 sero_dat$week <- relevel(as.factor(sero_dat$week), wk_ref)
+sero_dat$rha_name <- relevel(factor(sero_dat$rha_name), rha_name_ref)
 gva_age_cats$Sex <- relevel(as.factor(gva_age_cats$Sex), sex_ref)
 gva_age_cats$age_cat <- relevel(gva_age_cats$age_cat, age_ref)
 gva_age_cats$week <- relevel(as.factor(gva_age_cats$week), wk_ref)
+gva_age_cats$rha_name <- relevel(factor(gva_age_cats$rha_name), rha_name_ref)
 primary_dat$Sex <- relevel(as.factor(primary_dat$Sex), sex_ref)
 primary_dat$age_cat <- relevel(primary_dat$age_cat, age_ref)
 primary_dat$week <- relevel(as.factor(primary_dat$week), wk_ref)
+primary_dat$rha_name <- relevel(as.factor(primary_dat$rha_name), rha_name_ref)
 primary_age_cats$Sex <- relevel(as.factor(primary_age_cats$Sex), sex_ref)
 primary_age_cats$age_cat <- relevel(primary_age_cats$age_cat, age_ref)
 primary_age_cats$week <- relevel(as.factor(primary_age_cats$week), wk_ref)
+primary_age_cats$rha_name <- relevel(as.factor(primary_age_cats$rha_name), rha_name_ref)
 
 hh_dat <- sero_dat %>% 
   group_by(household_id) %>% 
@@ -432,7 +437,21 @@ subset_est %>%
         pos = sum(pos),
         neg = sum(neg),
         ind = sum(ind)
-      ))) %>%
+      )),
+      subset_est %>%
+    filter(var == "RHA") %>%
+    group_by(sim) %>%
+    mutate(rr = ifelse(val == "WRHA", NA, p / p[val == "WRHA"])) %>%
+    ungroup() %>%
+    left_join(sero_dat %>%
+      group_by(rha_name) %>%
+      summarize(
+        n = n(),
+        pos = sum(pos),
+        neg = sum(neg),
+        ind = sum(ind)
+      ),
+      by = c("val" = "rha_name"))) %>%
   group_by(var, val, n, pos, neg, ind) %>%
   summarize(
     `Relative risk (95% CI)` = ifelse(is.na(mean(rr)), "--",
@@ -467,7 +486,7 @@ subset_est %>%
   knitr::kable(
     align = c("lcccccc"), booktabs = T,
     linesep = "",
-    caption = "Relative risks of seropositivity by age and sex"
+    caption = "Relative risks of seropositivity by age, sex, and RHA"
   )
 ```
 
